[lworld] x86: Fix fast class initialization checks after merge

XMLWordPrintable

      We need to port the following changes to lworld:

      Implement fast class initialization checks:
      https://bugs.openjdk.java.net/browse/JDK-8223173
      https://bugs.openjdk.java.net/browse/JDK-8223213

      JNI upcalls should bypass class initialization barrier in c2i adapter
      https://bugs.openjdk.java.net/browse/JDK-8227260


      Because the code is missing in lworld, runtime/clinit/ClassInitBarrier.java fails with guarantee(callee != NULL && callee->is_method()) failed: bad handshake

      See here:
      https://hg.openjdk.java.net/valhalla/valhalla/file/ff8e4784d98c/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp#l794
      https://hg.openjdk.java.net/valhalla/valhalla/file/ff8e4784d98c/src/hotspot/share/runtime/sharedRuntime.cpp#l1499

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: