8230960: [lworld] x86: Fix fast class initialization checks after merge